Close items css fixes to hide scrollbars

--- a/gui/partial/checklist/checklist.less
+++ b/gui/partial/checklist/checklist.less
@@ -693,3 +693,21 @@ div.iframe-loader::after {
 	-o-animation: spin 2s infinite linear;
 	animation: spin 2s infinite linear;
 }
+
+.document-view-tools {
+	position: absolute;
+	right: 0;
+	top: 2.2em;
+	width:300px;
+	z-index: 2;
+}
+
+.document-container {
+	padding-top:3em;
+	overflow-y: hidden;
+}
+
+html, body {
+	overflow-x: hidden;
+	overflow-y: hidden;
+}
